# zip-utils

./: .clang-format  .gitignore  CMakeLists.txt  CMakeSettings.json  README.md  XUnzip.cpp  XUnzip.h  XZip.cpp  XZip.h  XZresult.h  resource.h
.github/workflows/: build.yml  codacy.yml  codeql.yml
examples/: test_utils.h
examples/modify/: CMakeLists.txt  modify.cpp  modifyBCB.bpr  modifyMINGW.bat  modifyVS.sln  modifyVS.vcxproj  modifyVS.vcxproj.filters  resource.h
examples/progress/: CMakeLists.txt  enable-visual-styles.manifest  progress.cpp  progressBCB.bpr  progressMINGW.bat  progressVS.sln  progressVS.vcxproj  progressVS.vcxproj.filters  resource.h
examples/simple/: CMakeLists.txt  resource.h  simple.cpp  simpleBCB.bpr  simpleMINGW.bat  simpleVS.sln  simpleVS.vcxproj  simpleVS.vcxproj.filters  simpleVSW.vcxproj
examples/std/: CMakeLists.txt  resource.h  std.cpp  stdBCB.bpr  stdGCC.txt  stdMINGW.bat  stdVS.sln  stdVS.vcxproj  stdVS.vcxproj.filters
examples/test/: CMakeLists.txt  resource.h  test.cpp  testBCB.bpf  testBCB.bpr  testMINGW.bat  testVS.sln  testVS.vcxproj  testVSW.vcxproj  testVSW.vcxproj.filters
